:construction: Spacing issue

--- a/wp-content/themes/commence/style.css
+++ b/wp-content/themes/commence/style.css
@@ -1444,17 +1444,10 @@ abbr[title]{
     text-align: center;
   }
 
-  #beer-specs .elementor-element-87e7f73 .elementor-container .elementor-col-20:nth-child(3) .elementor-widget-wrap{
-    margin-left: 0!important;
+  #beer-specs .elementor-element-87e7f73 .elementor-container .elementor-col-20:nth-child(3) .elementor-widget-heading{
+    margin-top: 25px!important;
   }
 
-  #beer-spects .elementor-element-87e7f73 .elementor-container .elementor-col-20:nth-child(4) .elementor-widget-wrap{
-    margin-left: 0!important;
-  }
-
-  #beer-spects .elementor-element-87e7f73 .elementor-container .elementor-col-20:nth-child(5) .elementor-widget-wrap{
-    margin-left: 0!important;
-  }
 
   #contact-info .elementor-container .elementor-col-33{
     width: 100%!important;
